# Spiffy

./: .editorconfig  .gitignore  README.md  Spiffy.sln
Sample/: Program.cs  Sample.csproj
Spiffy/: Constants.cs  Format.cs  Helpers.cs  JsonResponse.cs  Spiffy.cs  Spiffy.csproj  SpiffyResponse.cs
Spiffy/Json/: IPAddressJsonConverter.cs
spiffy-rs/: Cargo.toml  README.md
spiffy-rs/src/: main.rs
