[package]
name = "spiffy-rs"
version = "0.1.0"
authors = ["Kingloo <k1ngloo@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.10", features = ["blocking"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3